--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "gullible-graham",
   "type": "module",
   "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
+"scripts": {
+  "dev": "astro dev",
+  "start": "astro dev",
+  "build": "astro build --remote", 
+  "preview": "astro preview",
+  "astro": "astro"
+},
   "dependencies": {
     "@astrojs/db": "^0.18.3",
     "@astrojs/vercel": "^9.0.4",
